
  * Documented all of the function calls in memory.c using autodocbook

  * Started working on implementing PNG support in the images.c code. At first
	the code is just going to use uncompressed PNG bitmaps, but after that
	we can look into how to use the compressed bitmaps as well. I guess a
	little is better than nothing.

  * PNG now works for images without alpha channels (uncompressed inside the
	PDF for now).

  * PNG now works for images with alpha channels (the alpha channel is ignored)

  * PNG is now compressed inside the PDF document... I think this means PNG
	is now fully implementented

  * Documented all the function calls in panda.c using autodocbook

  * Documented all the function calls in text.c using autodocbook

  * Documented all the function calls in trailer.c using autodocbook

  * Documented all the function calls in utility.c using autodocbook

  * Documented all the function calls in xref.c using autodocbook

  * Fixed all the compile warnings that we have had since the namespace change

========================== 0.4 RC 2 Released ==================================

  * You can now open a PDF to stdout ("-" as the filename). This will result
	in the PDF document being dumped out to standard out, which could then
	be piped elsewhere. This is useful for things like web servers.

  * You can now use panda_setproperty to set whether streams should be
	compressed with Flate compression where possible. This reduces the size
	of the PDF document that is produced. If you ask for stream compression
	and the stream ends up being longer compressed, the stream will be 
	written out UNCOMPRESSED.

  * Minor changes to the autoconf and automake to support linux shared 
	libraries (Dave <dave@valinux.com>)

  * Cleaned up use of config defines in images code (Dave <dave@valinux.com>)

  * Finished off the setup of libtool

  * Rectified a bug in the TIFF handling code, reported by 
	Juan Herrero <juan_herrero@yahoo.com>