@@ -75,7 +75,7 @@ PLATFORM = UNIX
 RANLIB = ranlib
 VERSION = 0.4
 
-SUBDIRS = panda examples
+SUBDIRS = . panda examples
 
 lib_LTLIBRARIES = libpanda.la
 libpanda_la_SOURCES = curves.c date.c font.c info.c memory.c panda.c trailer.c error.c images.c internal.c objects.c template.c text.c utility.c xref.c
